--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,10 +32,13 @@ jobs:
       - name: Build
         run: npm run build
 
-      - name: Cleanup package.json
+      - name: Prepare release
+        working-directory: ./dist
         run: |
           jq 'del(.devDependencies)' package.json > package.json.tmp
+          rm package.json
           mv package.json.tmp package.json
+          cp ../README.md README.md
 
       - name: Semantic Release
         env:
