--- a/package.json
+++ b/package.json
@@ -3,10 +3,7 @@
   "version": "1.0.0",
   "description": "Scripts to automate the creation of a Godot project with Rust",
   "type": "module",
-  "bin": {
-    "new": "./src/commands/new.js",
-    "convert": "./src/commands/convert.js"
-  },
+  "bin": "./src/commands/index.js",
   "scripts": {
     "build": "tsc -p ./tsconfig.json"
   },
