--- a/package.json
+++ b/package.json
@@ -17,15 +17,19 @@
   "author": "Ryan Naddy",
   "license": "ISC",
   "dependencies": {
-    "chalk": "^5.4.1"
+    "chalk": "^5.4.1",
+    "fast-glob": "^3.3.3",
+    "ini": "^5.0.0"
   },
   "devDependencies": {
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@types/chalk": "^2.2.4",
     "@types/node": "^22.10.5",
+    "@types/ini": "^4.1.1",
     "semantic-release": "^24.2.1",
     "tsx": "^4.19.2",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "prettier": "^3.4.2"
   }
 }
