Added ability to add/remove assets

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "cSpell.words": ["cdylib", "dylib", "gdext", "gdextension", "reloadable"]
+  "cSpell.words": ["cdylib", "dylib", "gdext", "gdextension", "reloadable"],
+  "typescript.referencesCodeLens.enabled": true
 }
