fix(new): fix issue where new was not setting the correct package name to align with the gdextension file

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "chalk": "^5.4.1",
     "fast-glob": "^3.3.3",
-    "ini": "^5.0.0",
+    "@iarna/toml": "^2.2.5",
     "inquirer": "^12.3.0",
     "yauzl": "^3.2.0"
   },
@@ -28,7 +28,6 @@
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@types/chalk": "^2.2.4",
-    "@types/ini": "^4.1.1",
     "@types/node": "^22.10.5",
     "@types/yauzl": "^2.10.3",
     "prettier": "^3.4.2",
